--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -7,15 +7,18 @@
         <div class="alert alert-danger" role="alert">{{ flashError }}</div>
     {% endfor %}
 
-    <h1>Register</h1>
+    <h1>Rejestracja</h1>
 
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
+            label: 'Hasło'
         }) }}
+        {{ form_row(registrationForm.name) }}
+        {{ form_row(registrationForm.phone) }}
+        {{ form_row(registrationForm.NIP) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
+        <button type="submit" class="btn">Zarejestruj</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
